--- a/client/src/style.css
+++ b/client/src/style.css
@@ -61,7 +61,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -78,7 +77,7 @@ h2 {
 }
 
 p {
-  @apply text-base;
+  font-size: --var(--text-base);
 }
 
 button {
@@ -105,8 +104,6 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  min-height: 100vh;
 }
